# vectoria-algolia

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  PLAYBOOK.md  README.md  docker-compose.yml
demo/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
demo/src/: App.tsx  Hit.tsx  index.css
scripts/: Dockerfile.esci  batch.json  esci_setup.py  load_products.sh  metrics.py  products.json  quality_eval.py  wands_setup.py
src/: filter_parser.rs  ingest.rs  lib.rs  main.rs  translate.rs
src/routes/: mod.rs  multi.rs  objects.rs  search.rs
tests/: integration.rs
tests/client/: Dockerfile  algolia-compat.test.js  package-lock.json  package.json  vitest.config.js
